# comfy-pilot-omni

./: .tracking  CLAUDE.md  README.md  __init__.py  cli_adapters.py  mcp_server.py  pyproject.toml  settings_store.py
.github/workflows/: publish.yml
js/: claude-code.js
tests/: test_edit_graph.py  test_mcp_plugin_endpoints.py
user_context/: context.db  providers.db
user_context/environment/: custom_nodes.json  installed_nodes.json  models.json  summary.json
