[project]
name = "comfyui-pilot-extended"
description = "MCP server + multi-CLI embedded terminals that let AI coding agents see and edit your ComfyUI workflows"
version = "1.0.25"
license = { file = "LICENSE" }
dependencies = [
	"pywinpty>=2.0.15; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/rafek1241/comfyui-pilot-extended"

[tool.comfy]
PublisherId = "rafek1241"
DisplayName = "ComfyUI Pilot Extended"
Icon = "https://raw.githubusercontent.com/rafek1241/comfyui-pilot-extended/main/thumbnail.jpg"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
consider_namespace_packages = false
