[project]
name = "comfyui-pilot-extended"
description = "MCP server + multi-CLI embedded terminals that let AI coding agents see and edit your ComfyUI workflows"
version = "2.0.0"
license = { file = "LICENSE" }
dependencies = [
	"pywinpty>=2.0.15; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/Mlaurindo30/comfy-pilot-omni"

[tool.comfy]
PublisherId = "Mlaurindo30"
DisplayName = "Comfy Pilot Omni"
Icon = "https://raw.githubusercontent.com/Mlaurindo30/comfy-pilot-omni/main/thumbnail.jpg"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
consider_namespace_packages = false
